--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ ENV/
 *.sqlite
 
 # Project specific
-images/*.png
-images/*.svg
-!images/README.md  # Keep the README in the images directory
+images/
+# Keep the chess piece images in the repository
+# but ignore other image files that might be added later
+images/chess_spritesheet.svg
