Be able to SHOW THE BOARD in C++
I'd rather be doing this than fighting with websockets tbh

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cpp/chess-library"]
 	path = cpp/chess-library
 	url = https://github.com/Disservin/chess-library.git
+[submodule "cpp/uWebSockets"]
+	path = cpp/uWebSockets
+	url = https://github.com/uNetworking/uWebSockets.git
